2003-09-04  Derek Atkins  <derek@ihtfp.com>

	Apply Nigel Titley's patch to fix #103174:
	* src/register/register-core/basiccell.c:
	  - add some debugging messages
	  - don't kill ourself if we're asked to set the value to our own value.

	Description of the problem from Nigel:
	
	The problem is that the SX formula_cell stuff calls (via an
	intermediate step) 

	gnc_basic_cell_set_value_internal (BasicCell *cell, const char *value)

	with value pointing at cell->value. The overall effect of this as far
	as gnc_basic_cell_set_value_internal is concerned is to trash the value
	stored in cell->value *before* re-writing back to the same place (the
	g_free() writes memory management stuff in the first few bytes of the
	value). This is what trashes the debit/credit value in the SX register
	entry.
	
2003-08-29  David Hampton  <hampton@employees.org>

	* src/engine/Account.c: Fix bug in computing cleared balance.  The
	bug was introdiced 4/1.

	* lots of scm files: Remove the RCS "Id:" tag.  Its a PITA when
	syncing between branches.

2003-08-28  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/import-backend.c: Aaarg. Fixed extremely
	stupid bug in the import value setting workaround.

2003-08-19  Chris Lyttle  <chris@wilddev.net>

	* src/scm/main.scm: Update for 1.8.5 release

2003-08-15  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/import-backend.c: Workaround for
	multi-currency importing bug as discussed on gnucash-devel.

2003-08-13  Matt Vanecek   <mevanecek@yahoo.com>

    * src/backend/postgres/PostgresBackend.c pgend_session_begin():
      Moved the pgendUpdgradeDB() call outside of the SQL transaction,
      because the upgrades performed each have their own separate
      transaction.

    * src/backend/postgres/newtables.h: A little bit of cleanup. Also
      changed all the INSERTs to specify column names, to prevent
      problems with column orders between old/new tables.
